Partial update to corporate training page

--- a/training.html
+++ b/training.html
@@ -84,35 +84,55 @@
 						<h3 class="d_active tab_drawer_heading" rel="tab1">Agile Data Science</h3>
 						<div id="tab1" class="tab_content">
 							<div class="agile-heading">
-								<h3>Agile Data Science: Building Analytics Applications</h3>
+								<h3>Agile Data Science: Building Full-Stack Analytics Applications</h3>
 							</div>
 							<div class="common-box course-length-holder">
 								<h5>Course Length</h5>
-								<p>Six weeks, 2 evenings/week (6:30 9:30)=36 hours</p>
+								<p>Three Days, 8 Hours Per Day = 24 Hours</p>
 							</div>
 							<div class="common-box expected-holder">
-								<h5>Expected Enrollment</h5>
-								<p>18-24 students</p>
+								<h5>Required Enrollment</h5>
+								<p>6 students</p>
 							</div>
 							<div class="common-box course-overview-holder">
 								<h5>Course Overview</h5>
-								<p>This is a professional development class that teaches how to iteratively craft entire analytics web applications using Python, Flask, PySpark, Kafka, MongoDB, ElasticSearch, Bootstrap and D3. This stack is a popular one and is an example of the kind of stack needed to process and refine data at scale in real world applications of data science. During this course, students will use airline flight data to produce an entire analytic web application, from the ground up.</p>
-								<p>The course will serve as a tutorial in which the student learns basic skills in all the categories needed to ship an entire analytic application. Each section, the student will add a layer to their application, creating the start of something they can really use in their respective domains. While users will not learn the tools in detail, they will establish the working foundation needed, and will practice the kind of active learning-as-you-go that analytics requires. The goal of the course is to establish a working foundation with working code that the student can extend as they learn going forward. Working end-to-end code makes learning much easier.</p>
-								<p>The organizational principle behind the course is the 'data value pyramid', pictured below.</p>	
+								<p>This is a professional development class that teaches how to iteratively craft entire
+									analytics web applications using Python, Flask, Spark (SQL, Streaming, MLlib), Kafka,
+									MongoDB, ElasticSearch, Bootstrap and D3.js. This stack is a popular one and is an
+									example of the kind of stack needed to process and refine data at scale in real world
+									applications of data science. During this course, students will use airline flight
+									data to produce an entire analytic web application, from the ground up.</p>
+								<p>The course will serve as a tutorial in which the student learns basic skills in all
+									the categories needed to ship an entire analytics application. Each section, the
+									student will add a layer to their application, creating the start of something they
+									can really use in their respective domains. While users will not learn the tools in
+									detail, they will establish the working foundation needed, and will practice the
+									kind of active learning-as-you-go that analytics requires. The goal of the course is
+									to establish a working foundation with working code that the student can extend as
+									they learn going forward. Working end-to-end code makes learning much easier.</p>
+								<p>The organizational principle behind the course is the 'data value pyramid', pictured
+									below. Students will climb the data-value pyramid, refining data at one step to reach
+									the next.</p>
 							</div>
 							<div class="pyramid">
 								<img src="img/pyramid.jpg" class="img-responsive" alt="pyramid" />
 							</div>
 							<div class="common-box pyramid-contents">
-								<p>This class will be a chance for a practicing data scientist or web developer to learn to turn their data and analyses into real, actionable applications. We will put the student in a position where she can independently improve on the foundation we have given her to go on to build great analytics applications</p>
+								<p>This class will be a chance for a practicing data scientist or web developer to learn
+									to turn their data and analyses into full-blown actionable web applications. We will
+									put the student in a position where she can independently improve on the foundation
+									we have given her to go on to build great analytics applications</p>
 							</div>
 							<div class="common-box learning-promise-holder">
 								<h5>Learning Promise:</h5>
 								<p><b>The course appeals to one of the following persons:</b></p>
 								<ul class="list-unstyled">
-									<li>I am a programmer who wants to get a foothold in the emerging field of data science.</li>
-									<li>I am a practicing data scientist that wants to learn to build full-stack applications or apply agile principles to data science.</li>
-									<li>I am an entry-level data scientist that wants to learn how analytics applications are crafted.</li>
+									<li>I am a programmer who wants to get a foothold in the emerging field of data
+										science.</li>
+									<li>I am a practicing data scientist that wants to learn to build full-stack
+										applications or apply agile principles to data science.</li>
+									<li>I am an entry-level data scientist that wants to learn how analytics applications
+										are crafted.</li>
 								</ul>
 							</div>
 							<div class="common-box roles-holder">
@@ -123,23 +143,45 @@
 							</div>
 							<div class="common-box audience-level-holder">
 								<h5>Audience Level:</h5>
-								<p>The difficulty of the material is intermediate. While all the content we cover is introductory, the<br/>breadth of the material we cover makes this an intermediate challenge.</p>
+								<p>The difficulty of the material is intermediate. While all the content we cover is
+									introductory, the breadth of the material we cover makes this an intermediate
+									challenge.</p>
 							</div>
 							<div class="common-box teams-holder">
 								<h5>Teams:</h5>
-								<p>Teams will learn to work together to create full-stack applications. Each student will learn their<br/>individual role, and how to collaborate using agile development to do data science.</p>
+								<p>The course can be tailored to meet the needs of data science teams. Teams will learn
+									to work together to create full-stack applications. Each student will learn their
+									individual role, as well as how to collaborate using agile development to do data
+									science.</p>
 							</div>
 							<div class="common-box prerequisites-holder">
 								<h5>Prerequisites:</h5>
-								<p>Students should be fluent programmers in at least one language, preferably Python and with some experience in Javascript. Exposure to data analysis on some level is required, but that might be limited to SQL. We will provide a pre-test which students should pass to benefit optimally from the course.</p>
-								<p>A virtual machine/docker image will be provided which will contain the environment for the course. Data for the course will be downloadable. We will refer students to the Agile Data Science book will contain installation instructions if a student wishes to setup things locally on their machine, but we won't cover that in the course directly</p>
+								<p>Students should be fluent programmers in at least one language, preferably Python and
+									with some experience in Javascript. Exposure to data analysis on some level is required,
+									but that might be limited to SQL. We will provide a pre-test which students should
+									pass to benefit optimally from the course.</p>
+								<p>A virtual machine image for use with either Vagrant or Amazon EC2 will be provided
+									which will contain the environment for the course. Data for the course will be
+									downloadable. Students wishing to install the tools on their own computers can refer
+									to Appendeix A of <a href="book.html">Agile Data Science 2.0</a> (O'Reilly, 2017),
+									which contains detailed installation instructions. We won't cover a custom install
+									in the course directly.</p>
 							</div>
 							<div class="common-box program-holder">
 								<h5>Program:</h5>
-								<p>Students will learn the theory and practice of employing agile development principles to build entire analytics applications. Students will gain real-world experience building all sides of a real analytics application.</p>
-								<p>A lecture on theory will begin the course, followed by a lecture and examples illustrating how the tools form a complete data platform. Next a lecture explaining the dataset used in the course. After this, the remainder of the course will be guided exercises.</p>
-								<p>We will iteratively extract increasing amounts of value from raw data as we refine it in stages that correspond to the levels of the data-value pyramid.</p>
-								<p>Exercises throughout the course will ensure that students learn to apply what they are learning. Students will end up with a simple web application and back-end scripts they can alter and customize to fit their problem domain and their own datase</p>
+								<p>Students will learn the theory and practice of employing agile development principles
+									to build entire analytics applications. Students will gain real-world experience
+									building all aspects of a real analytics application.</p>
+								<p>A lecture on theory will begin the course, followed by a lecture and examples
+									illustrating how the tools form a complete data platform. Next a lecture explaining
+									the dataset used in the course. After this, the remainder of the course will be
+									guided exercises.</p>
+								<p>We will iteratively extract increasing amounts of value from raw data as we refine it
+									in stages that correspond to the levels of the data-value pyramid.</p>
+								<p>Exercises throughout the course will ensure that students learn to apply what they are
+									learning. Students will end up with a simple web application and data processing
+									scripts they can alter and customize to fit their own problem domain and their own
+									dataset.</p>
 							</div>
 							<div class="common-box big-ideas-holder">
 								<h5>Big Ideas:</h5>
