--- a/video.html
+++ b/video.html
@@ -114,8 +114,11 @@
 									<iframe src="https://player.vimeo.com/video/202336113" width="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 								</div>
 								<div class="video-btn">
-									<a href="#" class="btn bottom-video-btn">Buy Video Now<i class="fa fa-chevron-right"></i></a>
+									<a href="https://gum.co/SaTQq" class="btn bottom-video-btn">Buy Video Now<i class="fa fa-chevron-right"></i></a>
 								</div>
+								<script>
+
+								</script>
 							</div>
 						</div>
 					</div>
