--- a/book.html
+++ b/book.html
@@ -237,5 +237,16 @@ late.</li>
     <script type="text/javascript" src="js/bootstrap.min.js" language="javascript"></script>
     <script type="text/javascript" src="js/custom.js" language="javascript"></script>
 
+    <!-- Google Analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-9982986-2', 'auto');
+      ga('send', 'pageview');
+    </script>
+
     </body>
 </html>
