--- a/video.html
+++ b/video.html
@@ -116,9 +116,6 @@
 								<div class="video-btn">
 									<a href="https://gum.co/SaTQq" class="btn bottom-video-btn">Buy Video Now<i class="fa fa-chevron-right"></i></a>
 								</div>
-								<script>
-
-								</script>
 							</div>
 						</div>
 					</div>
@@ -153,5 +150,16 @@
         <script type="text/javascript" src="js/jquery-1.11.3.min.js" ></script>
         <script type="text/javascript" src="js/bootstrap.min.js" ></script>
 		<script type="text/javascript" src="js/custom.js" ></script>
+
+		<!-- Google Analytics -->
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-9982986-2', 'auto');
+		  ga('send', 'pageview');
+		</script>
     </body>
 </html>
