--- a/book.html
+++ b/book.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0044)book.html -->
+
 <html lang="en-us"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		
 		<!--<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">-->
@@ -30,7 +30,7 @@
                     <div class="row">
                         <div class="col-sm-3 col-xs-8">
                             <div class="logo">
-                                <a href="index.html"><img src="img/logo.png" class="img-responsive" alt="Logo"/></a>
+                                <a href="/"><img src="img/logo.png" class="img-responsive" alt="Logo"/></a>
                             </div>
                         </div>
                         <div class="col-sm-9">
@@ -46,11 +46,11 @@
                                     </div>
                                     <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
                                         <ul class="nav navbar-nav navbar-right">
-                                            <li><a href="index.html">Home</a></li>
-                                            <li><a href="people.html">People</a></li>
-                                            <li class="active"><a href="book.html">Book</a></li>
-                                            <li><a href="training.html">Corporate Training</a></li>
-                                            <li><a href="video.html">video Training</a></li>
+                                            <li><a href="/">Home</a></li>
+                                            <li><a href="/people">People</a></li>
+                                            <li class="active"><a href="/book">Book</a></li>
+                                            <li><a href="/training">Corporate Training</a></li>
+                                            <li><a href="/video">video Training</a></li>
                                         </ul>
                                     </div>
                                 </nav>
@@ -211,24 +211,24 @@ late.</li>
     	<div class="container">	
         	<div class="foot-social text-center">
             	<ul class="list-inline">
-                	<li><a href="http://facebook.com/jurney" target="_blank"><img src="img/share-fb.png" class="img-responsive"></a></li>
-                    <li><a href="http://twitter.com/rjurney" target="_blank"><img src="img/share-2.png" class="img-responsive"></a></li>
+                	<li><a href="https://www.facebook.com/DataSyndrome/" target="_blank"><img src="img/share-fb.png" class="img-responsive"></a></li>
+                    <li><a href="http://twitter.com/datasyndrome" target="_blank"><img src="img/share-2.png" class="img-responsive"></a></li>
                     <li><a href="http://linkedin.com/in/russelljurney" target="_blank"><img src="img/share-3.png" class="img-responsive"></a></li>
                     <li><a href="https://medium.com/@rjurney" target="_blank"><img src="img/share-4.png" class="img-responsive"></a></li>
-                    <li><a href="people.html"><img src="img/share-5.png" class="img-responsive"></a></li>
+                    <li><a href="/people"><img src="img/share-5.png" class="img-responsive"></a></li>
                 </ul>
             </div>
             <div class="foot-menu text-center">
                 <ul class="list-inline">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="people.html">People</a></li>
-                    <li><a href="book.html">Book</a></li>
-                    <li><a href="training.html">Corporate Training</a></li>
-                    <li><a href="video.html">Video Training</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/people">People</a></li>
+                    <li><a href="/book">Book</a></li>
+                    <li><a href="/training">Corporate Training</a></li>
+                    <li><a href="/video">Video Training</a></li>
                 </ul>
             </div>
             <div class="foot-copy text-center">
-            	<p>© Copyright 2017  Data Syndrome · <a href="book.html#">Privacy Policy</a> ·</p>
+            	<p>© Copyright 2017  Data Syndrome · <a href="/">Privacy Policy</a> ·</p>
             </div>
         </div>
     </footer>
