--- a/people.html
+++ b/people.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0046)people.html -->
+<!-- saved from url=(0046)/people -->
 <html lang="en-us"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		
 		<!--<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">-->
@@ -29,7 +29,7 @@
                 	<div class="row">
                     	<div class="col-sm-3 col-xs-8">
                         	<div class="logo">
-                            	<a href="index.html"><img src="img/logo.png" class="img-responsive" alt="Logo"></a>
+                            	<a href="/"><img src="img/logo.png" class="img-responsive" alt="Logo"></a>
                             </div>
                         </div>
                         <div class="col-sm-9">
@@ -45,11 +45,11 @@
                                     </div>                                                                                                                   
                                     <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
                                         <ul class="nav navbar-nav navbar-right">
-                                            <li><a href="index.html">Home</a></li>
-                                            <li class="active"><a href="people.html">People</a></li>
-                                            <li><a href="book.html">Book</a></li>
-                                            <li><a href="training.html">Corporate Training</a></li>
-											<li><a href="video.html">video Training</a></li>
+                                            <li><a href="/">Home</a></li>
+                                            <li class="active"><a href="/people">People</a></li>
+                                            <li><a href="/book">Book</a></li>
+                                            <li><a href="/training">Corporate Training</a></li>
+											<li><a href="/video">video Training</a></li>
                                         </ul>
                                     </div>
                         		</nav>
@@ -76,7 +76,7 @@
                             	<h3>Russell Jurney, <span>Principal Consultant</span></h3>
                                 <p>My name is Russell Jurney. I am principal consultant at Data Syndrome, a product analytics
                                     consultancy dedicated to advancing the adoption of the development methodology Agile Data Science,
-                                    as outlined in the book <a href="/book.html">Agile Data Science 2.0</a>. I’ve worked
+                                    as outlined in the book <a href="//book">Agile Data Science 2.0</a>. I’ve worked
                                     as a data scientist building data products for over a decade,
                                     starting in interactive web visualization and then segwaying towards data products, machine learning
                                     and artificial intelligence at companies such as Ning, LinkedIn and Hortonworks. I am a self taught
@@ -132,24 +132,24 @@
     	<div class="container">	
         	<div class="foot-social text-center">
             	<ul class="list-inline">
-                	<li><a href="http://facebook.com/jurney" target="_blank"><img src="img/share-fb.png" class="img-responsive"></a></li>
-                    <li><a href="http://twitter.com/rjurney" target="_blank"><img src="img/share-2.png" class="img-responsive"></a></li>
+                	<li><a href="https://www.facebook.com/DataSyndrome/" target="_blank"><img src="img/share-fb.png" class="img-responsive"></a></li>
+                    <li><a href="http://twitter.com/datasyndrome" target="_blank"><img src="img/share-2.png" class="img-responsive"></a></li>
                     <li><a href="http://linkedin.com/in/russelljurney" target="_blank"><img src="img/share-3.png" class="img-responsive"></a></li>
                     <li><a href="https://medium.com/@rjurney" target="_blank"><img src="img/share-4.png" class="img-responsive"></a></li>
-                    <li><a href="people.html#"><img src="img/share-5.png" class="img-responsive"></a></li>
+                    <li><a href="/people#"><img src="img/share-5.png" class="img-responsive"></a></li>
                 </ul>
             </div>
             <div class="foot-menu text-center">
                 <ul class="list-inline">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="people.html">People</a></li>
-                    <li><a href="book.html">Book</a></li>
-                    <li><a href="training.html">Corporate Training</a></li>
-                    <li><a href="video.html">Video Training</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/people">People</a></li>
+                    <li><a href="/book">Book</a></li>
+                    <li><a href="/training">Corporate Training</a></li>
+                    <li><a href="/video">Video Training</a></li>
                 </ul>
             </div>
             <div class="foot-copy text-center">
-            	<p>© Copyright 2017  Data Syndrome · <a href="people.html#">Privacy Policy</a> ·</p>
+            	<p>© Copyright 2017  Data Syndrome · <a href="/people#">Privacy Policy</a> ·</p>
             </div>
         </div>
     </footer>
