--- a/training/index.html
+++ b/training/index.html
@@ -38,7 +38,7 @@
 						<div class="row">
 							<div class="col-sm-3 col-xs-8">
 								<div class="logo">
-									<a href="index.html"><img src="img/logo.png" class="img-responsive" alt="Logo"/></a>
+									<a href="/"><img src="img/logo.png" class="img-responsive" alt="Logo"/></a>
 								</div>
 							</div>
 							<div class="col-sm-9">
@@ -54,11 +54,11 @@
 										</div>                                                                                                                   
 										<div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
 											<ul class="nav navbar-nav navbar-right">
-												<li><a href="index.html">Home</a></li>
-												<li><a href="people.html">People</a></li>
-												<li><a href="book.html">Book</a></li>
-												<li class="active"><a href="training.html">Corporate Training</a></li>
-												<li><a href="video.html">video Training</a></li>
+												<li><a href="/">Home</a></li>
+												<li><a href="/people">People</a></li>
+												<li><a href="/book">Book</a></li>
+												<li class="active"><a href="/training">Corporate Training</a></li>
+												<li><a href="/video">video Training</a></li>
 											</ul>
 										</div>
 									</nav>
@@ -163,7 +163,7 @@
 								<p>A virtual machine image for use with either Vagrant or Amazon EC2 will be provided
 									which will contain the environment for the course. Data for the course will be
 									downloadable. Students wishing to install the tools on their own computers can refer
-									to Appendeix A of <a href="book.html">Agile Data Science 2.0</a> (O'Reilly, 2017),
+									to Appendeix A of <a href="/book">Agile Data Science 2.0</a> (O'Reilly, 2017),
 									which contains detailed installation instructions. We won't cover a custom install
 									in the course directly.</p>
 							</div>
@@ -239,20 +239,20 @@
 			<div class="container">	
 				<div class="foot-social text-center">
 					<ul class="list-inline">
-						<li><a href="http://facebook.com/jurney"><img src="img/share-1.png" class="img-responsive" target="_blank" /></a></li>
-						<li><a href="http://twitter.com/rjurney"><img src="img/share-2.png" class="img-responsive" target="_blank" /></a></li>
+						<li><a href="https://www.facebook.com/DataSyndrome/"><img src="img/share-1.png" class="img-responsive" target="_blank" /></a></li>
+						<li><a href="http://twitter.com/datasyndrome"><img src="img/share-2.png" class="img-responsive" target="_blank" /></a></li>
 						<li><a href="http://linkedin.com/in/russelljurney"><img src="img/share-3.png" class="img-responsive"target="_blank" /></a></li>
 						<li><a href="https://medium.com/@rjurney"><img src="img/share-4.png" class="img-responsive" target="_blank" /></a></li>
-						<li><a href="people.html"><img src="img/share-5.png" class="img-responsive" target="_blank"/></a></li>
+						<li><a href="/people"><img src="img/share-5.png" class="img-responsive" target="_blank"/></a></li>
 					</ul>
 				</div>
 				<div class="foot-menu text-center">
 					<ul class="list-inline">
-						<li><a href="index.html">Home</a></li>
-						<li><a href="people.html">People</a></li>
-						<li><a href="book.html">Book</a></li>
-						<li><a href="training.html">Corporate Training</a></li>
-						<li><a href="video.html">Video Training</a></li>
+						<li><a href="/">Home</a></li>
+						<li><a href="/people">People</a></li>
+						<li><a href="/book">Book</a></li>
+						<li><a href="/training">Corporate Training</a></li>
+						<li><a href="/video">Video Training</a></li>
 					</ul>
 				</div>
 				<div class="foot-copy text-center">
