--- a/video/index.html
+++ b/video/index.html
@@ -38,7 +38,7 @@
 						<div class="row">
 							<div class="col-sm-3 col-xs-8">
 								<div class="logo">
-									<a href="index.html"><img src="img/logo.png" class="img-responsive" alt="Logo"/></a>
+									<a href="/"><img src="img/logo.png" class="img-responsive" alt="Logo"/></a>
 								</div>
 							</div>
 							<div class="col-sm-9">
@@ -54,11 +54,11 @@
 										</div>                                                                                                                   
 										<div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
 											<ul class="nav navbar-nav navbar-right">
-												<li><a href="index.html">Home</a></li>
-												<li><a href="people.html">People</a></li>
-												<li><a href="book.html">Book</a></li>
-												<li><a href="training.html">Corporate Training</a></li>
-												<li class="active"><a href="video-training.html">video Training</a></li>
+												<li><a href="/">Home</a></li>
+												<li><a href="/people">People</a></li>
+												<li><a href="/book">Book</a></li>
+												<li><a href="/training">Corporate Training</a></li>
+												<li class="active"><a href="video-/training">video Training</a></li>
 											</ul>
 										</div>
 									</nav>
@@ -79,7 +79,7 @@
 								<div class="top-contents">
 									<h3>Realtime Predictive Analytics</h3>
 									<h5>With Kafka, PySpark, Spark MLlib and Spark Streaming</h5>
-									<p style="padding-bottom: 0px;">The course covers the construction of an entire predictive analytics web application using Python/Flask/JQuery, Kafka, PySpark, Spark MLlib and Spark Streaming. This is similar to chapters 7 and 8 in the book <a href="book.html">Agile Data Science 2.0</a> (O'Reilly, 2017).</p>
+									<p style="padding-bottom: 0px;">The course covers the construction of an entire predictive analytics web application using Python/Flask/JQuery, Kafka, PySpark, Spark MLlib and Spark Streaming. This is similar to chapters 7 and 8 in the book <a href="/book">Agile Data Science 2.0</a> (O'Reilly, 2017).</p>
 									<p style="padding-top: 0px; padding-bottom: 0px;">First we go over the architecture used. After project setup using a local virtual machine or Amazon EC2, we use PySpark in batch mode to train a classifier model to predict flight delays in terms of four categories. Next we build a web application front-end to our predictive system, which submit prediction requests to a Kafka queue. Next we use Spark MLLib with Spark Streaming to respond to those prediction requests. Finally, we demonstrate and analyze the entire system together.</p>
 								</div>
 								<div class="list-contents">
@@ -126,20 +126,20 @@
 			<div class="container">	
 				<div class="foot-social text-center">
 					<ul class="list-inline">
-						<li><a href="http://facebook.com/jurney"><img src="img/share-1.png" class="img-responsive" target="_blank" /></a></li>
-						<li><a href="http://twitter.com/rjurney"><img src="img/share-2.png" class="img-responsive" target="_blank" /></a></li>
+						<li><a href="https://www.facebook.com/DataSyndrome/"><img src="img/share-1.png" class="img-responsive" target="_blank" /></a></li>
+						<li><a href="http://twitter.com/datasyndrome"><img src="img/share-2.png" class="img-responsive" target="_blank" /></a></li>
 						<li><a href="http://linkedin.com/in/russelljurney"><img src="img/share-3.png" class="img-responsive"target="_blank" /></a></li>
 						<li><a href="https://medium.com/@rjurney"><img src="img/share-4.png" class="img-responsive" target="_blank" /></a></li>
-						<li><a href="people.html"><img src="img/share-5.png" class="img-responsive" target="_blank"/></a></li>
+						<li><a href="/people"><img src="img/share-5.png" class="img-responsive" target="_blank"/></a></li>
 					</ul>
 				</div>
 				<div class="foot-menu text-center">
 					<ul class="list-inline">
-						<li><a href="index.html">Home</a></li>
-						<li><a href="people.html">People</a></li>
-						<li><a href="book.html">Book</a></li>
-						<li><a href="training.html">Corporate Training</a></li>
-						<li><a href="video.html">Video Training</a></li>
+						<li><a href="/">Home</a></li>
+						<li><a href="/people">People</a></li>
+						<li><a href="/book">Book</a></li>
+						<li><a href="/training">Corporate Training</a></li>
+						<li><a href="/video">Video Training</a></li>
 					</ul>
 				</div>
 				<div class="foot-copy text-center">
