--- a/book/index.html
+++ b/book/index.html
@@ -103,7 +103,7 @@
                             <p>Building analytics products at scale requires a deep investment in people, machines, and time. How can you be sure you're building the right models that people will pay for? With this hands-on book, you'll learn a flexible toolset and methodology for building effective analytics applications with Spark.</p>
                             <p>Using lightweight tools such as Python, PySpark, Elastic MapReduce, MongoDB, ElasticSearch, Doc2vec, Deep Learning, D3.js, Leaflet, Docker and Heroku, your team will create an agile environment for exploring data, starting with an example application to mine flight data into an analytic product. </p>
                             <ul class="list-inline">
-                            	<li><a href="http://www.oreilly.com/" class="btn btn-book1" target="_blank">Sample Chapter</a></li>
+                            	<li><a href="https://www.safaribooksonline.com/library/view/agile-data-science/9781491960103/" class="btn btn-book1" target="_blank">Safari Pre-Release</a></li>
                                 <li><a href="http://shop.oreilly.com/product/0636920051619.do" class="btn btn-book2" target="_blank">Buy Now</a></li>
                                 <li><a href="https://github.com/rjurney/Agile_Data_Code_2" class="btn btn-book3" target="_blank"><i class="fa fa-github"></i> Github Code</a></li>
                                 <li><a href="https://www.amazon.com/Agile-Data-Science-2-0-Applications/dp/1491960116/" class="amazon" target="_blank"><img src="img/amazon.png" class="img-responsive"></a></li>
