--- a/book.html
+++ b/book.html
@@ -228,7 +228,7 @@ late.</li>
                 </ul>
             </div>
             <div class="foot-copy text-center">
-            	<p>© Copyright 2017  Data Syndrome · <a href="/">Privacy Policy</a> ·</p>
+            	<p>© Copyright 2017  Data Syndrome <a href="/">Privacy Policy</a> ·</p>
             </div>
         </div>
     </footer>
