--- a/people.html
+++ b/people.html
@@ -149,7 +149,7 @@
                 </ul>
             </div>
             <div class="foot-copy text-center">
-            	<p>© Copyright 2017  Data Syndrome · <a href="/people#">Privacy Policy</a> ·</p>
+            	<p>© Copyright 2017  Data Syndrome <a href="/people#">Privacy Policy</a> ·</p>
             </div>
         </div>
     </footer>
