Fixing previous commit to old look but across all pages

--- a/training.html
+++ b/training.html
@@ -256,7 +256,7 @@
 					</ul>
 				</div>
 				<div class="foot-copy text-center">
-					<p>&copy; Copyright 2017  Data Syndrome <a href="#">Privacy Policy</a> .</p>
+					<p>&copy; Copyright 2017  Data Syndrome · <a href="#">Privacy Policy</a> .</p>
 				</div>
 			</div>
 		</footer>
