--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ methodology that applies agile principles to the  process of doing  data science
                 </ul>
             </div>
             <div class="foot-copy text-center">
-            	<p>&copy; Copyright 2017  Data Syndrome <a href="#">Privacy Policy</a> ·</p>
+            	<p>&copy; Copyright 2017  Data Syndrome · <a href="#">Privacy Policy</a> ·</p>
             </div>
         </div>
     </footer>
