Added CRs for text of video <p>s

--- a/video.html
+++ b/video.html
@@ -79,8 +79,17 @@
 								<div class="top-contents">
 									<h3>Realtime Predictive Analytics</h3>
 									<h5>With Kafka, PySpark, Spark MLlib and Spark Streaming</h5>
-									<p style="padding-bottom: 0px;">The course covers the construction of an entire predictive analytics web application using Python/Flask/JQuery, Kafka, PySpark, Spark MLlib and Spark Streaming. This is similar to chapters 7 and 8 in the book <a href="/book">Agile Data Science 2.0</a> (O'Reilly, 2017).</p>
-									<p style="padding-top: 0px; padding-bottom: 0px;">First we go over the architecture used. After project setup using a local virtual machine or Amazon EC2, we use PySpark in batch mode to train a classifier model to predict flight delays in terms of four categories. Next we build a web application front-end to our predictive system, which submit prediction requests to a Kafka queue. Next we use Spark MLLib with Spark Streaming to respond to those prediction requests. Finally, we demonstrate and analyze the entire system together.</p>
+									<p style="padding-bottom: 0px;">The course covers the construction of an entire predictive analytics
+										web application using Python/Flask/JQuery, Kafka, PySpark, Spark MLlib and Spark
+										Streaming. This is similar to chapters 7 and 8 in the book
+										<a href="/book">Agile Data Science 2.0</a> (O'Reilly, 2017).</p>
+									<p style="padding-top: 0px; padding-bottom: 0px;">First we go over the architecture used. After project setup using a
+										local virtual machine or Amazon EC2, we use PySpark in batch mode to train a
+										classifier model to predict flight delays in terms of four categories. Next we
+										build a web application front-end to our predictive system, which submit
+										prediction requests to a Kafka queue. Next we use Spark MLLib with Spark
+										Streaming to respond to those prediction requests. Finally, we demonstrate
+										and analyze the entire system together.</p>
 								</div>
 								<div class="list-contents">
 									<div class="row">
