Emboldened text instead of *text* for index

--- a/index.html
+++ b/index.html
@@ -123,8 +123,12 @@
                     	<div class="col-sm-6">
                         	<div class="data-content">
                             	<h3>Data Syndrome: Our Manifesto</h3>
-                                <p>Agile Data Science 2.0 outlines a data science and software
-methodology that applies agile principles to the  process of doing  data science to build  data products. * Data Syndrome  exists  to spread Agile Data  Science in the world* by educating, evangelizing , and training teams to build data products and by directly consulting on projects to put Agile Data Science in use to deliver profitable data products to companies, large and small.</p>
+                                <p>Agile Data Science 2.0 outlines a data science and software methodology that applies
+                                    agile principles to the process of doing data science to build data products.
+                                    <b>Data Syndrome exists to spread Agile Data Science in the world</b> by educating,
+                                    evangelizing, and training teams to build data products and by directly consulting
+                                    on projects to put Agile Data Science in use to deliver profitable data products to
+                                    companies, large and small.</p>
                             </div>
                         </div>
                         <div class="col-sm-6">
