Put 'Lets Talk' bar at the top of the training page

--- a/training.html
+++ b/training.html
@@ -68,6 +68,49 @@
 					</div>
 				</div>
 			</div>
+			<div class="home-form-all">
+				<div class="container">
+					<div class="row">
+						<form action="//kontexa.us2.list-manage.com/subscribe/post?u=b0e7b5e284c89542cebce0e69&amp;id=fabe4c1fbf" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+						<div class="col-sm-2">
+							<div class="form-in">
+								<h4>Let's Talk</h4>
+							</div>
+						</div>
+						<div class="col-sm-5ths sp">
+							<div class="form-in">
+								<input type="text" class="form-control" placeholder="Name" value="" name="FULL_NAME" id="mce-FULL_NAME">
+							</div>
+						</div>
+						<div class="col-sm-5ths sp">
+							<div class="form-in">
+								<input type="email" placeholder="Email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" required="required">
+							</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="form-in">
+								<input type="text" class="form-control" placeholder="Note" value="" name="NOTE" id="mce-NOTE">
+							</div>
+						</div>
+						<div class="col-sm-2">
+							<div class="form-in">
+								<input type="submit" value="Send Now!" name="subscribe" id="mc-embedded-subscribe" class="btn btn-default button">
+							</div>
+						</div>
+						<div id="mce-responses" class="clear">
+							<div class="response" id="mce-error-response" style="display:none"></div>
+							<div class="response" id="mce-success-response" style="display:none"></div>
+						</div>
+						<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+						<div style="position: absolute; left: -5000px;" aria-hidden="true">
+							<input type="text" name="b_b0e7b5e284c89542cebce0e69_fabe4c1fbf" tabindex="-1" value="">
+						</div>
+					</form>
+
+
+					</div>
+				</div>
+			</div>
     	</header>
 		
 		<div class="corporate-holder">
