--- a/video/index.html
+++ b/video/index.html
@@ -111,19 +111,19 @@
 										<div class="col-sm-12 col-md-4">
 											<div class="list-1">
 												<ul class="list-unstyled">
-													<li>Introduction</li>
-													<li>Architecture</li>
-													<li>Project Setup</li>
-													<li>Training a Model</li>
+													<li>Lesson 0: Introduction</li>
+													<li>Lesson 1: Architecture</li>
+													<li>Lesson 2: Project Setup</li>
+													<li>Lesson 3: Training a Model</li>
 												</ul>
 											</div>
 										</div>
 										<div class="col-sm-12 col-md-8">
 											<div class="list-1">
 												<ul class="list-unstyled">
-													<li>Building a Web Application</li>
-													<li>Realtime Prediction with Spark Streaming</li>
-													<li>Closing the Loop</li>	
+													<li>Lesson 4: Building a Web Application</li>
+													<li>Lesson 5: Realtime Prediction with Spark Streaming</li>
+													<li>Lesson 6: Closing the Loop</li>
 												</ul>
 											</div>
 										</div>
