--- a/video/index.html
+++ b/video/index.html
@@ -79,7 +79,7 @@
 								<div class="top-contents">
 									<h3>Realtime Predictive Analytics</h3>
 									<h5>With Kafka, PySpark, Spark MLlib and Spark Streaming</h5>
-									<p style="padding-bottom: 0px;">The course covers the construction of an entire predictive analytics
+									<p style="padding-bottom: 0px;">This two hour course covers the construction of an entire predictive analytics
 										web application. We use Kafka, PySpark, Spark MLlib and Spark Streaming on the
 										back end and complete the predictive system with a Python/Flask/JQuery front
 										end. This builds on chapters 7 and 8 in the book
