--- a/talks.html
+++ b/talks.html
@@ -17,7 +17,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700" rel="stylesheet"> 
-        <link rel="stylesheet" type="text/css" media="screen" href="style.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
 
 		<!-- FAVICONS -->
 		<link rel="shortcut icon" href="img/favicon/favicon.png" type="image/png">
@@ -519,11 +519,11 @@
 			<div class="container">	
 				<div class="foot-social text-center">
 					<ul class="list-inline">
-						<li><a href="http://facebook.com/jurney"><img src="img/icons/share-1.png" class="img-responsive" target="_blank" /></a></li>
-						<li><a href="http://twitter.com/rjurney"><img src="img/icons/share-2.png" class="img-responsive" target="_blank" /></a></li>
-						<li><a href="http://linkedin.com/in/russelljurney"><img src="img/icons/share-3.png" class="img-responsive"target="_blank" /></a></li>
-						<li><a href="https://medium.com/@rjurney"><img src="img/icons/share-4.png" class="img-responsive" target="_blank" /></a></li>
-						<li><a href="people.html"><img src="img/icons/share-5.png" class="img-responsive" target="_blank"/></a></li>
+						<li><a href="http://facebook.com/jurney"><img src="img/share-1.png" class="img-responsive" target="_blank" /></a></li>
+						<li><a href="http://twitter.com/rjurney"><img src="img/share-2.png" class="img-responsive" target="_blank" /></a></li>
+						<li><a href="http://linkedin.com/in/russelljurney"><img src="img/share-3.png" class="img-responsive"target="_blank" /></a></li>
+						<li><a href="https://medium.com/@rjurney"><img src="img/share-4.png" class="img-responsive" target="_blank" /></a></li>
+						<li><a href="people.html"><img src="img/share-5.png" class="img-responsive" target="_blank"/></a></li>
 					</ul>
 				</div>
 				<div class="foot-menu text-center">
