Reworking talks page with real content

--- a/talks.html
+++ b/talks.html
@@ -118,9 +118,9 @@
 				</div>
 				<div class="tab-holder">
 					<ul class="tabs">
-						<li class="active list-1" rel="tab1">Training a Model</li>
-						<li class="list-2" rel="tab2">Building a Web Application</li>
-						<li class="list-3" rel="tab3">Architecture</li>
+						<li class="active list-1" rel="tab1">Agile Data Science 2.0</li>
+						<!--<li class="list-2" rel="tab2">Building a Web Application</li>
+						<li class="list-3" rel="tab3">Architecture</li>-->
 					</ul>
 					<div class="tab_container">
 						<h3 class="d_active tab_drawer_heading" rel="tab1">Training a Model</h3>
@@ -132,8 +132,8 @@
 										<div class="col-sm-6">
 											<div class="talks-contents">
 												<h3>Agile Data Science 2.0</h3>
-												<p>Agile Data Science 2.0 Russell Jurney 2 Data Engineer Data Scientist Visualization Software Engineer 85% 85% 85% Writer 85% Teacher 50% Russell Jurney is a veteran data scientist and thought leader. He coined the term Agile Data Science in the book of that name from O'Reilly in 2012, which outlines the first agile development methodology for data science. </p>
-												<p>Russell has constructed numerous full-stack analytics products over the past ten years and now works with clients helping them extract value from their data assets. Russell Jurney Skill Principal Consultant at Data Syndrome Russell Jurney </p>
+												<p>Building Full Stack Data Analytics Applications with Kafka and Spark</p>
+												<p></p>
 												<!--<div class="talks-button">
 													<a class="btn read-btn" href="#">Read More</a>
 												</div>-->
