--- a/people/index.html
+++ b/people/index.html
@@ -68,7 +68,7 @@
                 	<div class="row">
                     	<div class="col-sm-3">
                         	<div class="prince-image">
-                            	<img src="img/prin-1.jpg" class="img-responsive">
+                            	<img src="img/russ_cropped_profile.png" class="img-responsive">
                             </div>
                         </div>
                         <div class="col-sm-9">
@@ -117,7 +117,7 @@
                         </div>
                     	<div class="col-sm-3">
                         	<div class="prince-image bottom">
-                            	<img src="img/prin-2.jpg" class="img-responsive">
+                            	<img src="img/prin-1.jpg" class="img-responsive">
                                 <h4>Russell Jurney</h4>
                                 <p>Principal Consultant</p>
                             </div>
